@@ -1,3 +1,7 @@
+2010-07-09  Ingo Renner  <ingo.renner@dkd.de>
+
+	* Added missing styling for the relevance bar view helper
+
 2010-07-02  Ingo Renner  <ingo.renner@dkd.de>
 
 	* Updated the install script to get Solr 1.4.1
